<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/recycler_border"
    android:columnCount="2"
    android:padding="10dp"
    android:rowCount="2"
    android:useDefaultMargins="true">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:gravity="fill_horizontal"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"

        android:orientation="vertical">

        <TextView
            android:id="@+id/bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bankName"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/jiraNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jiraItsmNumber"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team"
            android:textColor="@color/white"
            android:textSize="17sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:layout_gravity="end"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="17sp"
            app:drawableStartCompat="@drawable/ic_baseline_watch_later_24"
            app:drawableTint="@color/white" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="17sp"
            app:drawableStartCompat="@drawable/ic_baseline_info_24"
            app:drawableTint="@color/white" />

        <TextView
            android:id="@+id/ag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ag"
            android:textSize="17sp"
            android:textColor="@color/white"/>
    </LinearLayout>


</GridLayout>