<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.DashboardFragment"
    tools:ignore="ScrollViewCount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:cardCornerRadius="7dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/dashboard_card_bg"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="30dp"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toplam_prim_hakedis"
            android:layout_gravity="top|center_horizontal"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            android:textColor="@color/dashboard_card_title"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toplam_prim_hakedis_value"
                android:layout_gravity="bottom|center_horizontal"
                android:textSize="30sp"
                android:textColor="@color/dashboard_card_value"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            app:cardCornerRadius="7dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/dashboard_card_bg"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="30dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cagri_prim_hakedis"
                    android:layout_gravity="top|center_horizontal"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textAllCaps="true"
                    android:textColor="@color/dashboard_card_title"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cagri_prim_hakedis_value"
                    android:layout_gravity="bottom|center_horizontal"
                    android:textSize="30sp"
                    android:textColor="@color/dashboard_card_value"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            app:cardCornerRadius="7dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/dashboard_card_bg"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="30dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proje_prim_hakedis"
                    android:layout_gravity="top|center_horizontal"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textAllCaps="true"
                    android:textColor="@color/dashboard_card_title"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proje_prim_hakedis_value"
                    android:layout_gravity="bottom|center_horizontal"
                    android:textSize="30sp"
                    android:textColor="@color/dashboard_card_value"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            app:cardCornerRadius="7dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/dashboard_card_bg"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            android:layout_marginBottom="20dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="30dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acik_proje_ve_cagrilarim"
                    android:layout_gravity="top|center_horizontal"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textAllCaps="true"
                    android:textColor="@color/dashboard_card_title"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acik_proje_ve_cagrilarim_value"
                    android:layout_gravity="bottom|center_horizontal"
                    android:textSize="30sp"
                    android:textColor="@color/dashboard_card_value"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>



    </LinearLayout>
</ScrollView>